--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,6 +15,7 @@
     <nav>
       <a href="/celebrities">List</a>
       <a href="/celebrities/create">New Celebrity</a>
+      <a href="/movies/create">New Movie</a>
     </nav>
 
     <div class="container">
