--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,6 +16,7 @@
       <a href="/celebrities">List</a>
       <a href="/celebrities/create">New Celebrity</a>
       <a href="/movies/create">New Movie</a>
+      <a href="/movies">Movies List</a>
     </nav>
 
     <div class="container">
