--- a/views/movies/new-movie.hbs
+++ b/views/movies/new-movie.hbs
@@ -1,8 +1,8 @@
 <div>
   <h3>Create a new movie:</h3>
   <form action="/movies/create" method="post">
-    <label for="name">Name:</label>
-    <input type="text" name="name" />
+    <label for="title">Title:</label>
+    <input type="text" name="title" />
     <label for="genre">Genre:</label>
     <input type="text" name="genre" />
     <label for="plot">Plot:</label>
