--- a/views/movies/movies.hbs
+++ b/views/movies/movies.hbs
@@ -3,6 +3,6 @@
     <h3>Movies List</h3>
 
     {{#each allMovies}}
-        <p><a href="">{{this.title}}</a></p>
+        <p><a href="/movies/{{this._id}}">{{this.title}}</a></p>
     {{/each}}
 </div>
