--- a/views/movies/movie-details.hbs
+++ b/views/movies/movie-details.hbs
@@ -12,4 +12,7 @@
     <form action="/movies/{{singleMovie._id}}/delete" method="post">
         <button>Delete movie</button>
     </form>
+    <form action="/movies/{{singleMovie._id}}/edit" method="get">
+        <button>Update movie</button>
+    </form>
 </div>
