working on bonus

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,10 +13,10 @@
   <body>
 
     <nav>
-      <a href="/celebrities">List</a>
+      <a href="/celebrities">Celebrities</a>
       <a href="/celebrities/create">New Celebrity</a>
       <a href="/movies/create">New Movie</a>
-      <a href="/movies">Movies List</a>
+      <a href="/movies">Movies</a>
     </nav>
 
     <div class="container">
