--- a/views/celebrities/celebrities.hbs
+++ b/views/celebrities/celebrities.hbs
@@ -1,6 +1,6 @@
 <div>
     <h2>List of celebrities:</h2>
     {{#each celebrities}}
-    <h3><a href="{{this._id}}">{{this.name}}</a></h3>
+    <h3><a href="/celebrities/{{this._id}}">{{this.name}}</a></h3>
     {{/each}}
 </div>
