--- a/views/movies/movie-details.hbs
+++ b/views/movies/movie-details.hbs
@@ -10,9 +10,9 @@
         <p>Catch Phrase: {{this.catchPhrase}}</p>
     {{/each}}
     <form action="/movies/{{singleMovie._id}}/delete" method="post">
-        <button>Delete movie</button>
+        <button class="btn btn-danger">Delete movie</button>
     </form>
     <form action="/movies/{{singleMovie._id}}/edit" method="get">
-        <button>Update movie</button>
+        <button class="btn btn-primary">Update movie</button>
     </form>
 </div>
