--- a/views/movies/edit-movie.hbs
+++ b/views/movies/edit-movie.hbs
@@ -1,19 +1,28 @@
 <div>
   <h3>Update the movie:</h3>
   <form action="/movies/{{singleMovie.id}}/edit" method="post">
-    <label for="title">Title:</label>
-    <input type="text" name="title" value="{{singleMovie.title}}"/>
-    <label for="genre">Genre:</label>
-    <input type="text" name="genre" value="{{singleMovie.genre}}"/>
-    <label for="plot">Plot:</label>
-    <input type="text" name="plot" value="{{singleMovie.plot}}"/>
-    <label for="cast">Cast:</label>
-    <select name="cast" multiple="true">
+  <div class="mb-3">
+    <label for="title" class="form-label">Title:</label>
+    <input class="form-control" type="text" name="title" value="{{singleMovie.title}}"/>
+  </div>
+  <div class="mb-3">
+    <label for="genre" class="form-label">Genre:</label>
+    <input class="form-control" type="text" name="genre" value="{{singleMovie.genre}}"/>
+  </div>
+  <div class="mb-3">
+    <label for="plot" class="form-label">Plot:</label>
+    <input class="form-control" type="text" name="plot" value="{{singleMovie.plot}}"/>
+  </div>
+  <div class="mb-3">
+
+    <label for="cast" class="form-label">Cast:</label>
+    <select class="form-select" name="cast" multiple="true">
 
       {{#each celebrities}}
         <option value="{{this._id}}">{{this.name}}</option>
       {{/each}}
     </select>
-    <button>Add</button>
+  </div>
+    <button class="btn btn-primary">Add</button>
   </form>
 </div>
