bonus functionality done

--- a/views/celebrities/celebrities-details.hbs
+++ b/views/celebrities/celebrities-details.hbs
@@ -5,9 +5,9 @@
         <p>Quote: {{catchPhrase}}</p>
     
     <form action="/celebrities/{{_id}}/delete" method="post">
-        <button>Delete movie</button>
+        <button>Delete Celebrity</button>
     </form>
-    <form action="/movies/{{_id}}/edit" method="get">
-        <button>Update movie</button>
+    <form action="/celebrities/{{_id}}/edit" method="get">
+        <button>Update Celebrity</button>
     </form>
 </div>
